# plant-stats

./: README.MD  platformio.ini
Plant/: CMakeLists.txt  blemanager.cpp  blemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
firmware/: .gitignore
firmware/include/: Config.h
firmware/lib/BLE_Provider/: BLEManager.cpp
firmware/lib/BME280_Driver/: BME280_Driver.h
firmware/lib/DisplayManager/: DisplayManager.cpp
firmware/lib/Distance_Sensor/: DistanceSensor.h
firmware/lib/Sensors/: PlantSensors.cpp  PlantSensors.h
firmware/src/: main.cpp
include/: Config.h  DataStructures.h
lib/BLE_Provider/: BLEManager.cpp  BLEManager.h
lib/BME280_Driver/: BME280_Driver.cpp
lib/DisplayManager/: DisplayManager.cpp  DisplayManager.h
lib/Distance_Sensor/: DistanceSensor.cpp  DistanceSensor.h
lib/Sensors/: PlantSensors.cpp  PlantSensors.h
lib/Storage/: DataLogger.cpp  DataLogger.h
src/: main.cpp
